# subsonic_lib

./: .buildconfig  .gitignore  Cargo.toml
src/: deserialize.rs  lib.rs  restapi.rs  serde_types.rs
test/: download.sh
