[package]
name = "subsonic-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.7"
reqwest = {version = "0.11", features = ["blocking"] }
futures = "0.3"
md-5 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
anyhow = "1.0"
#maybe abi_stable...?
