[package]
name = "subsonic_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.7"
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3"
md-5 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
anyhow = "1.0"
thiserror = "1.0"
const_format = { version = "0.2", features = ["const_generics"] }
#maybe abi_stable...?
